--- a/data/od/BPA/DocTypeMapping.json
+++ b/data/od/BPA/DocTypeMapping.json
@@ -1389,6 +1389,808 @@
       ]
     },
     {
+      "applicationType": "BUILDING_PLAN_SCRUTINY",
+      "ServiceType": "ALTERATION",
+      "RiskType": "LOW",
+      "WFState": "INITIATED",
+      "docTypes": [
+        {
+          "code": "APPL.IDENTITYPROOF",
+          "required": true,
+          "allow": true,
+          "order": 1
+        },
+        {
+          "code": "APPL.OWNERIDPROOF",
+          "required": false,
+          "allow": true,
+          "order": 1
+        },
+        {
+          "code": "APPL.ROR",
+          "required": false,
+          "allow": true,
+          "order": 2
+        },
+        {
+          "code": "APPL.SALEGIFTDEED",
+          "required": false,
+          "allow": true,
+          "order": 3
+        },
+        {
+          "code": "APPL.REVSITEPLAN",
+          "required": false,
+          "allow": true,
+          "order": 4
+        },
+        {
+          "code": "APPL.LANDPOSSAFFI",
+          "required": false,
+          "allow": true,
+          "order": 5
+        },
+        {
+          "code": "BPD.BPL",
+          "required": false,
+          "allow": true,
+          "order": 8
+        },
+        {
+          "code": "BPD.SP",
+          "required": false,
+          "allow": true,
+          "order": 9
+        },
+        {
+          "code": "BPD.LP",
+          "required": false,
+          "allow": true,
+          "order": 10
+        },
+        {
+          "code": "BPD.MATSPEC",
+          "required": false,
+          "allow": true,
+          "order": 11
+        },
+        {
+          "code": "BPD.SITEPHOTO",
+          "required": false,
+          "allow": true,
+          "order": 12
+        },
+        {
+          "code": "BPD.SSUPCERT",
+          "required": false,
+          "allow": true,
+          "order": 13
+        },
+        {
+          "code": "BPD.SSTABCERT",
+          "required": false,
+          "allow": true,
+          "order": 14
+        },
+        {
+          "code": "BPD.3RDPARTYSTRUCCERT",
+          "required": false,
+          "allow": true,
+          "order": 14
+        },
+        {
+          "code": "NOC.NOCDEPUTYFORESTOFFICER",
+          "required": false,
+          "allow": true,
+          "order": 232
+        },
+        {
+          "code": "NOC.ENVCLEARANCE",
+          "required": false,
+          "allow": true,
+          "order": 233
+        },
+        {
+          "code": "NOC.NOCULBHUD",
+          "required": false,
+          "allow": true,
+          "order": 234
+        },
+        {
+          "code": "NOC.NOCPUBHLTHENGGORG",
+          "required": false,
+          "allow": true,
+          "order": 235
+        },
+        {
+          "code": "NOC.NOCELECTRICDISCOMP",
+          "required": false,
+          "allow": true,
+          "order": 236
+        },
+        {
+          "code": "NOC.NOCPOLUNHOMEDEPT",
+          "required": false,
+          "allow": true,
+          "order": 237
+        },
+        {
+          "code": "NOC.NOCWATERRESDEPT",
+          "required": false,
+          "allow": true,
+          "order": 238
+        },
+        {
+          "code": "NOC.NOCODSPCB",
+          "required": false,
+          "allow": true,
+          "order": 239
+        },
+        {
+          "code": "NOC.NOCTEHREVDISASMANG",
+          "required": false,
+          "allow": true,
+          "order": 240
+        },
+        {
+          "code": "NOC.NOCNHAI",
+          "required": false,
+          "allow": true,
+          "order": 241
+        },
+        {
+          "code": "APPL.OTHERDOCUMENT",
+          "required": false,
+          "allow": true,
+          "order": 242
+        },
+        {
+          "code": "APPL.TEMPSTRUCTUREPHOTO",
+          "required": false,
+          "allow": true,
+          "order": 243
+        },
+        {
+          "code": "APPL.ROADWIDENINGCERTIFICATE",
+          "required": false,
+          "allow": true,
+          "order": 244
+        },
+        {
+          "code": "APPL.APPROVEDPLANFOREXISTINGCONSTRUCTION",
+          "required": true,
+          "allow": true,
+          "order": 245
+        },
+        {
+          "code": "APPL.APPROVALLETTERFOREXISTINGCONSTRUCTION",
+          "required": true,
+          "allow": true,
+          "order": 246
+        }
+      ],
+      "DocTypes1": [
+        {
+          "code": "ADDL.ALLOTMENTLETTER",
+          "required": false,
+          "allow": true,
+          "order": 1
+        },
+        {
+          "code": "ADDL.SKETCHMAP",
+          "required": false,
+          "allow": true,
+          "order": 2
+        },
+        {
+          "code": "ADDL.POSSESSIONLETTER",
+          "required": false,
+          "allow": true,
+          "order": 3
+        }
+      ],
+      "DocTypes2": [
+        {
+          "code": "ADDL.POSSESSIONLETTER",
+          "required": false,
+          "allow": true,
+          "order": 1
+        },
+        {
+          "code": "ADDL.APPROVEDLAYOUT",
+          "required": false,
+          "allow": true,
+          "order": 2
+        }
+      ],
+      "DocTypes3": [
+        {
+          "code": "ADDL.RERACERTIFICATE",
+          "required": false,
+          "allow": true,
+          "order": 1
+        }
+      ],
+      "DocTypes4": [
+        {
+          "code": "ADDL.BENCHMARKCERTIFICATE",
+          "required": false,
+          "allow": true,
+          "order": 1
+        }
+      ],
+      "DocTypes5": [
+        {
+          "code": "ADDL.BENCHMARKCERTIFICATE",
+          "required": false,
+          "allow": true,
+          "order": 1
+        },
+        {
+          "code": "ADDL.REGULARISATIONANNEXUREI",
+          "required": false,
+          "allow": true,
+          "order": 2
+        }
+      ],
+      "DocTypes6": [
+        {
+          "code": "ADDL.EIDPFEERECEIPT",
+          "required": false,
+          "allow": true,
+          "order": 1
+        }
+      ],
+      "DocTypes7": [
+        {
+          "code": "ADDL.PHEDNOC",
+          "required": false,
+          "allow": true,
+          "order": 1
+        },
+        {
+          "code": "ADDL.EXTERNALINFRAPLAN",
+          "required": false,
+          "allow": true,
+          "order": 2
+        },
+        {
+          "code": "ADDL.INFRADEVAFFIDAVIT",
+          "required": false,
+          "allow": true,
+          "order": 1
+        },
+        {
+          "code": "ADDL.PLANDEVIATIONAFFIDAVIT",
+          "required": false,
+          "allow": true,
+          "order": 2
+        },
+        {
+          "code": "ADDL.ONEPERCENTFEERECEIPT",
+          "required": false,
+          "allow": true,
+          "order": 3
+        },
+        {
+          "code": "ADDL.DRAINAFFIDAVIT",
+          "required": false,
+          "allow": true,
+          "order": 4
+        },
+        {
+          "code": "ADDL.WASTEMANAGMENTPLAN",
+          "required": false,
+          "allow": true,
+          "order": 5
+        },
+        {
+          "code": "ADDL.BENCHMARKCERTIFICATE",
+          "required": false,
+          "allow": true,
+          "order": 6
+        },
+        {
+          "code": "ADDL.REGULARISATIONANNEXUREI",
+          "required": false,
+          "allow": true,
+          "order": 7
+        }
+      ]
+    },
+    {
+      "applicationType": "BUILDING_PLAN_SCRUTINY",
+      "ServiceType": "ALTERATION",
+      "RiskType": "OTHER",
+      "WFState": "INITIATED",
+      "docTypes": [
+        {
+          "code": "APPL.IDENTITYPROOF",
+          "required": true,
+          "allow": true,
+          "order": 1
+        },
+        {
+          "code": "APPL.OWNERIDPROOF",
+          "required": false,
+          "allow": true,
+          "order": 1
+        },
+        {
+          "code": "APPL.ROR",
+          "required": false,
+          "allow": true,
+          "order": 2
+        },
+        {
+          "code": "APPL.SALEGIFTDEED",
+          "required": false,
+          "allow": true,
+          "order": 3
+        },
+        {
+          "code": "APPL.REVSITEPLAN",
+          "required": false,
+          "allow": true,
+          "order": 4
+        },
+        {
+          "code": "APPL.LANDPOSSAFFI",
+          "required": false,
+          "allow": true,
+          "order": 5
+        },
+        {
+          "code": "BPD.BPL",
+          "required": false,
+          "allow": true,
+          "order": 8
+        },
+        {
+          "code": "BPD.SP",
+          "required": false,
+          "allow": true,
+          "order": 9
+        },
+        {
+          "code": "BPD.LP",
+          "required": false,
+          "allow": true,
+          "order": 10
+        },
+        {
+          "code": "BPD.MATSPEC",
+          "required": false,
+          "allow": true,
+          "order": 11
+        },
+        {
+          "code": "BPD.SITEPHOTO",
+          "required": false,
+          "allow": true,
+          "order": 12
+        },
+        {
+          "code": "BPD.SSUPCERT",
+          "required": false,
+          "allow": true,
+          "order": 13
+        },
+        {
+          "code": "BPD.SSTABCERT",
+          "required": false,
+          "allow": true,
+          "order": 14
+        },
+        {
+          "code": "BPD.3RDPARTYSTRUCCERT",
+          "required": false,
+          "allow": true,
+          "order": 14
+        },
+        {
+          "code": "NOC.NOCDEPUTYFORESTOFFICER",
+          "required": false,
+          "allow": true,
+          "order": 242
+        },
+        {
+          "code": "NOC.ENVCLEARANCE",
+          "required": false,
+          "allow": true,
+          "order": 243
+        },
+        {
+          "code": "NOC.NOCULBHUD",
+          "required": false,
+          "allow": true,
+          "order": 244
+        },
+        {
+          "code": "NOC.NOCPUBHLTHENGGORG",
+          "required": false,
+          "allow": true,
+          "order": 245
+        },
+        {
+          "code": "NOC.NOCELECTRICDISCOMP",
+          "required": false,
+          "allow": true,
+          "order": 246
+        },
+        {
+          "code": "NOC.NOCPOLUNHOMEDEPT",
+          "required": false,
+          "allow": true,
+          "order": 247
+        },
+        {
+          "code": "NOC.NOCWATERRESDEPT",
+          "required": false,
+          "allow": true,
+          "order": 248
+        },
+        {
+          "code": "NOC.NOCODSPCB",
+          "required": false,
+          "allow": true,
+          "order": 249
+        },
+        {
+          "code": "NOC.NOCTEHREVDISASMANG",
+          "required": false,
+          "allow": true,
+          "order": 250
+        },
+        {
+          "code": "NOC.NOCNHAI",
+          "required": false,
+          "allow": true,
+          "order": 251
+        },
+        {
+          "code": "APPL.OTHERDOCUMENT",
+          "required": false,
+          "allow": true,
+          "order": 252
+        },
+        {
+          "code": "APPL.TEMPSTRUCTUREPHOTO",
+          "required": false,
+          "allow": true,
+          "order": 253
+        },
+        {
+          "code": "APPL.ROADWIDENINGCERTIFICATE",
+          "required": false,
+          "allow": true,
+          "order": 254
+        },
+        {
+          "code": "APPL.APPROVEDPLANFOREXISTINGCONSTRUCTION",
+          "required": true,
+          "allow": true,
+          "order": 255
+        },
+        {
+          "code": "APPL.APPROVALLETTERFOREXISTINGCONSTRUCTION",
+          "required": true,
+          "allow": true,
+          "order": 256
+        }
+      ],
+      "DocTypes1": [
+        {
+          "code": "ADDL.ALLOTMENTLETTER",
+          "required": false,
+          "allow": true,
+          "order": 1
+        },
+        {
+          "code": "ADDL.SKETCHMAP",
+          "required": false,
+          "allow": true,
+          "order": 2
+        },
+        {
+          "code": "ADDL.POSSESSIONLETTER",
+          "required": false,
+          "allow": true,
+          "order": 3
+        }
+      ],
+      "DocTypes2": [
+        {
+          "code": "ADDL.POSSESSIONLETTER",
+          "required": false,
+          "allow": true,
+          "order": 1
+        },
+        {
+          "code": "ADDL.APPROVEDLAYOUT",
+          "required": false,
+          "allow": true,
+          "order": 2
+        }
+      ],
+      "DocTypes3": [
+        {
+          "code": "ADDL.RERACERTIFICATE",
+          "required": false,
+          "allow": true,
+          "order": 1
+        }
+      ],
+      "DocTypes4": [
+        {
+          "code": "ADDL.BENCHMARKCERTIFICATE",
+          "required": false,
+          "allow": true,
+          "order": 1
+        }
+      ],
+      "DocTypes5": [
+        {
+          "code": "ADDL.BENCHMARKCERTIFICATE",
+          "required": false,
+          "allow": true,
+          "order": 1
+        },
+        {
+          "code": "ADDL.REGULARISATIONANNEXUREI",
+          "required": false,
+          "allow": true,
+          "order": 2
+        }
+      ],
+      "DocTypes6": [
+        {
+          "code": "ADDL.EIDPFEERECEIPT",
+          "required": false,
+          "allow": true,
+          "order": 1
+        }
+      ],
+      "DocTypes7": [
+        {
+          "code": "ADDL.PHEDNOC",
+          "required": false,
+          "allow": true,
+          "order": 1
+        },
+        {
+          "code": "ADDL.EXTERNALINFRAPLAN",
+          "required": false,
+          "allow": true,
+          "order": 2
+        },
+        {
+          "code": "ADDL.INFRADEVAFFIDAVIT",
+          "required": false,
+          "allow": true,
+          "order": 1
+        },
+        {
+          "code": "ADDL.PLANDEVIATIONAFFIDAVIT",
+          "required": false,
+          "allow": true,
+          "order": 2
+        },
+        {
+          "code": "ADDL.ONEPERCENTFEERECEIPT",
+          "required": false,
+          "allow": true,
+          "order": 3
+        },
+        {
+          "code": "ADDL.DRAINAFFIDAVIT",
+          "required": false,
+          "allow": true,
+          "order": 4
+        },
+        {
+          "code": "ADDL.WASTEMANAGMENTPLAN",
+          "required": false,
+          "allow": true,
+          "order": 5
+        },
+        {
+          "code": "ADDL.BENCHMARKCERTIFICATE",
+          "required": false,
+          "allow": true,
+          "order": 6
+        },
+        {
+          "code": "ADDL.REGULARISATIONANNEXUREI",
+          "required": false,
+          "allow": true,
+          "order": 7
+        }
+      ]
+    },
+    {
+      "applicationType": "BUILDING_PLAN_SCRUTINY",
+      "ServiceType": "ALTERATION",
+      "RiskType": "MEDIUM",
+      "WFState": "INITIATED",
+      "docTypes": [
+        {
+          "code": "APPL.IDENTITYPROOF",
+          "required": false,
+          "allow": true,
+          "order": 33
+        },
+        {
+          "code": "APPL.ADDRESSPROOF",
+          "required": false,
+          "allow": true,
+          "order": 34
+        },
+        {
+          "code": "APPL.LTR",
+          "required": false,
+          "allow": true,
+          "order": 35
+        },
+        {
+          "code": "APPL.TDP",
+          "required": false,
+          "allow": true,
+          "order": 36
+        },
+        {
+          "code": "APPL.LAC",
+          "required": false,
+          "allow": true,
+          "order": 37
+        },
+        {
+          "code": "APPL.SSC",
+          "required": false,
+          "allow": true,
+          "order": 38
+        },
+        {
+          "code": "APPL.LSVS",
+          "required": false,
+          "allow": true,
+          "order": 39
+        },
+        {
+          "code": "BPD.SP",
+          "required": false,
+          "allow": true,
+          "order": 40
+        },
+        {
+          "code": "BPD.FP",
+          "required": false,
+          "allow": true,
+          "order": 41
+        },
+        {
+          "code": "BPD.SCP",
+          "required": false,
+          "allow": true,
+          "order": 42
+        },
+        {
+          "code": "BPD.EP",
+          "required": false,
+          "allow": true,
+          "order": 43
+        },
+        {
+          "code": "BPD.SECP",
+          "required": false,
+          "allow": true,
+          "order": 44
+        },
+        {
+          "code": "BPD.PP",
+          "required": false,
+          "allow": true,
+          "order": 45
+        },
+        {
+          "code": "BPD.RP",
+          "required": false,
+          "allow": true,
+          "order": 46
+        },
+        {
+          "code": "NOC.NOCDEPUTYFORESTOFFICER",
+          "required": false,
+          "allow": true,
+          "order": 252
+        },
+        {
+          "code": "NOC.ENVCLEARANCE",
+          "required": false,
+          "allow": true,
+          "order": 253
+        },
+        {
+          "code": "NOC.NOCULBHUD",
+          "required": false,
+          "allow": true,
+          "order": 254
+        },
+        {
+          "code": "NOC.NOCPUBHLTHENGGORG",
+          "required": false,
+          "allow": true,
+          "order": 255
+        },
+        {
+          "code": "NOC.NOCELECTRICDISCOMP",
+          "required": false,
+          "allow": true,
+          "order": 256
+        },
+        {
+          "code": "NOC.NOCPOLUNHOMEDEPT",
+          "required": false,
+          "allow": true,
+          "order": 257
+        },
+        {
+          "code": "NOC.NOCWATERRESDEPT",
+          "required": false,
+          "allow": true,
+          "order": 258
+        },
+        {
+          "code": "NOC.NOCODSPCB",
+          "required": false,
+          "allow": true,
+          "order": 259
+        },
+        {
+          "code": "NOC.NOCTEHREVDISASMANG",
+          "required": false,
+          "allow": true,
+          "order": 260
+        },
+        {
+          "code": "NOC.NOCNHAI",
+          "required": false,
+          "allow": true,
+          "order": 261
+        },
+        {
+          "code": "APPL.OTHERDOCUMENT",
+          "required": false,
+          "allow": true,
+          "order": 262
+        },
+        {
+          "code": "APPL.TEMPSTRUCTUREPHOTO",
+          "required": false,
+          "allow": true,
+          "order": 263
+        },
+        {
+          "code": "APPL.ROADWIDENINGCERTIFICATE",
+          "required": false,
+          "allow": true,
+          "order": 264
+        },
+        {
+          "code": "APPL.APPROVEDPLANFOREXISTINGCONSTRUCTION",
+          "required": true,
+          "allow": true,
+          "order": 265
+        },
+        {
+          "code": "APPL.APPROVALLETTERFOREXISTINGCONSTRUCTION",
+          "required": true,
+          "allow": true,
+          "order": 266
+        }
+      ]
+    },
+    {
       "applicationType": "BUILDING_OC_PLAN_SCRUTINY",
       "ServiceType": "NEW_CONSTRUCTION",
       "RiskType": "MEDIUM",
