MDMS Changes for FSMv1.1

--- a/data/od/FSM/Config.json
+++ b/data/od/FSM/Config.json
@@ -4,7 +4,7 @@
     "Config": [
         {
             "code":"noOfTrips",
-            "override":false,
+            "override":true,
             "default":1,
             "active":true
         },
