--- a/data/od/FinanceService/AccountheadMapping.json
+++ b/data/od/FinanceService/AccountheadMapping.json
@@ -7,7 +7,8 @@
       "taxhead": "PT_ADHOC_REBATE",
       "glcode": "2716003",
       "validFrom": 1234567890,
-      "validTo": 2345678901},
+      "validTo": 2345678901
+    },
     {
       "billingservicecode": "PT",
       "taxhead": "PT_ADVANCE_CARRYFORWARD",
