master config for installments

--- a/master-config.json
+++ b/master-config.json
@@ -438,6 +438,13 @@
       "uniqueKeys": [
         "$.code"
       ]
+    },
+    "Installments": {
+      "masterName": "Installments",
+      "isStateLevel": true,
+      "uniqueKeys": [
+        "$.code"
+      ]
     }
   },
   "inventory": {
