--- a/data/od/BPA/NocTypeMapping.json
+++ b/data/od/BPA/NocTypeMapping.json
@@ -8,7 +8,16 @@
       "riskType": "ALL",
       "nocTriggerState": "DOC_VERIFICATION_INPROGRESS",
       "nocTypes": [
-        
+        {
+          "type": "NMA_NOC",
+          "required": true,
+          "documentType": "NOC.NMA"
+        },
+        {
+          "type": "FIRE_NOC",
+          "required": true,
+          "documentType": "NOC.FIRE"
+        }
       ]
     },
     {
@@ -17,7 +26,16 @@
       "riskType": "LOW",
       "nocTriggerState": "DOC_VERIFICATION_INPROGRESS",
       "nocTypes": [
-        
+        {
+          "type": "NMA_NOC",
+          "required": true,
+          "documentType": "NOC.NMA"
+        },
+        {
+          "type": "FIRE_NOC",
+          "required": true,
+          "documentType": "NOC.FIRE"
+        }
       ]
     },
     {
