workflow state change to initiated

--- a/data/od/BPA/PreApprovedDocTypeMapping.json
+++ b/data/od/BPA/PreApprovedDocTypeMapping.json
@@ -4,10 +4,10 @@
   "PreApprovedDocTypeMapping": [
     {
 		
-		"applicationType": "BUILDING_PLAN_SCRUTINY",
+	  "applicationType": "BUILDING_PLAN_SCRUTINY",
       "ServiceType": "NEW_CONSTRUCTION",
       "RiskType": "LOW",
-      "WFState": "INPROGRESS",
+      "WFState": "INITIATED",
       "docTypes": [
              
         {  
