--- a/master-config.json
+++ b/master-config.json
@@ -1207,8 +1207,7 @@
           "$.code"
         ]
       },
-      "ReceivedPaymentType":
-    {
+      "ReceivedPaymentType": {
         "masterName": "ReceivedPaymentType",
         "isStateLevel": true,
         "uniqueKeys": [
