--- a/master-config.json
+++ b/master-config.json
@@ -1207,13 +1207,6 @@
           "$.code"
         ]
       },
-      "ReceivedPaymentType": {
-        "masterName": "ReceivedPaymentType",
-        "isStateLevel": true,
-        "uniqueKeys": [
-            "$.code"
-        ]
-    },
     "CheckList": {
       "masterName": "CheckList",
       "isStateLevel": true,
@@ -1289,6 +1282,14 @@
       "isStateLevel": false,
       "uniqueKeys": [
         "$.code"
+      ]
+    },
+    "ReceivedPaymentType":
+    {
+        "masterName": "ReceivedPaymentType",
+        "isStateLevel": true,
+        "uniqueKeys": [
+            "$.code"
       ]
     }
   },
